src/test/deca/context/invalid/created/testPass2/redefWrongRetTypeMeth.deca
// Description :
//    Test invalide : Opération d'addition sur des booléens
//
// Résultats :
//    Erreur contextuelle
//    Ligne 12: ReturnTypeMismatchException: Method redefinition is allowed, but the return type must be a subtype of the original method's return type.

class A{
    boolean isTrue(){}
}
class B extends A{
    int isTrue(){}
}